2001-11-20  Ray Tomlinson  <RTomlinson@bbn.com>

	* HostConfigurationBuilder.java:
	Initialize hosts, nodes, agents regardless of whether the
	experiment has a society or not. This was probably some ancient
	idea that might have been a good one at the time, but is
	irrelevant (and wrong) now.

	* ExperimentBuilder.java:
	Don't manipulate the editable and runnable flags of an experiment;
	that constitutes a change of the experiment and merely starting to
	edit the the experiment shouldn't be a change per se. Instead, set
	the "editInProgress" flag of the experiment to suppress attempts
	to run the experiment or edit it a second time.

	* Experiment.java:
	Add "editInProgress" variable so that editability and runnablility
	can be suppressed without actually setting the runnable or
	editable flags. Also, fireModification() when changing the
	editable and runnable flags so the changes get written to the
	workspace file.

	* HostConfigurationBuilder.java:
	Detect changes to node args and set modified accordingly. Handle
	restoration of default value by removing node-specific value.
	Disallow empty string argument name.

2001-11-19  Ray Tomlinson  <RTomlinson@bbn.com>

	* HostConfigurationBuilder.java:
	Add menu items to allow editing of default node command line
	arguments.
	Separate -D options from other arguments.

	* ExperimentNode.java:
	Get default node arguments from
	Experiment.etDefaultNodeArguments()

	* Experiment.java:
	Add getDefaultNodeArguments to supply the default values for all
	node options. Move initialization code to here from NodeComponent.
	Save node arguments to database.
	Set default node arguments as arguments of the society component
	data.

	* ExperimentBuilder.java:
	Fix bug 778.
	Add modification listener so ExperimentBuilder knows if the
	property builder (editor) makes changes to the experiment. Also,
	(belt and suspenders approach) allow save of unmodified experiment
	after informing the user that no changes have been made. User can