@@ -1,3 +1,15 @@
+2001-11-27  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* Experiment.java:
+	Add the properties of nodes and hosts (Description, location, etc)
+	as parameters of the corresponding ComponentData so they will be
+	saved to the database.
+
+2001-11-26  Ray Tomlinson  <RTomlinson@bbn.com>
+
+	* help.html:
+	Add documentation of command line argument dialog.
+
 2001-11-20  Ray Tomlinson  <RTomlinson@bbn.com>
 
 	* HostConfigurationBuilder.java:
